--- a/WindowsFormsApp1/Properties/Resources.resx
+++ b/WindowsFormsApp1/Properties/Resources.resx
@@ -166,4 +166,34 @@
   <data name="procesador" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\procesador.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="AsistenteCom" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\AsistenteCom.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="camara1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\camara1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="camara2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\camara2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Iluminacionp20" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Iluminacionp20.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="InteligenciaFo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\InteligenciaFo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Juegos" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Juegos.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="P20" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\P20.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="P20lite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\P20lite.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pilap20" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pilap20.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ProcesamientoP20" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ProcesamientoP20.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
